--- a/app/views/admin_mailer/theft_alert_purchased.html.haml
+++ b/app/views/admin_mailer/theft_alert_purchased.html.haml
@@ -7,7 +7,7 @@
     target: "_blank"
 
 %h4{style: "margin-top: 1em;"}
-  = link_to "Plan: #{@theft_alert_plan.title_string}",
+  = link_to "Plan: #{theft_alert_plan_title(@theft_alert_plan)}",
     edit_admin_theft_alert_plan_url(@theft_alert_plan),
     target: "_blank"
 
