--- a/app/views/theft_alert_plans/_theft_alert_plan.html.haml
+++ b/app/views/theft_alert_plans/_theft_alert_plan.html.haml
@@ -18,7 +18,7 @@
         = t(".days")
 
       .detail-card-subtitle.detail-card-price
-        = number_to_currency(theft_alert_plan.amount_cents / 100.0, unit: "$", separator: ".")
+        = number_to_currency(theft_alert_plan.amount_cents / 100.0)
 
     .detail-card-content-main
       = theft_alert_plan.description_html.html_safe
