--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -85,7 +85,7 @@
           .form-group
             = f.label :language, class: "control-label"
             = f.select :language,
-              options_for_select(blog_languages, selected: @blog.language),
+              options_for_select(language_choices, selected: @blog.language),
               class: "form-control"
 
       .row.mt-4
