--- a/app/views/bikes/edit_alert_purchase.html.haml
+++ b/app/views/bikes/edit_alert_purchase.html.haml
@@ -14,7 +14,7 @@
           = form_tag theft_alerts_path,
             method: :post,
             id: "js-confirm-plan-form",
-            data: { key: ENV["STRIPE_PUBLISHABLE_KEY"], email: current_user.email, type:  "Pay" },
+            data: { key: ENV["STRIPE_PUBLISHABLE_KEY"], email: current_user.email, type:  "Pay", description: t(".bike_index_promoted_alert") },
             class: "confirm-form" do
             = hidden_field_tag :stripe_amount, @selected_theft_alert_plan.amount_cents
             = hidden_field_tag :stripe_email
