Create Stripe payment in localized currency
- Adds `currency` column to `payments` with `"USD"` default
- Sends requests to Stripe with "currency" set IAW I18n.locale

--- a/app/views/bikes/edit_theft_details.html.haml
+++ b/app/views/bikes/edit_theft_details.html.haml
@@ -47,7 +47,7 @@
               = srecord.label :estimated_value, class: 'form-well-label'
               .form-well-input.input-group{ style: 'max-height: 2.5rem;'}
                 .input-group-addon
-                  $
+                  = t("number.currency.format.unit")
                 = srecord.number_field :estimated_value, min: '1', class: 'form-control'
 
             - unless @bike.abandoned?
