--- a/app/views/bikes/edit_alert_purchase.html.haml
+++ b/app/views/bikes/edit_alert_purchase.html.haml
@@ -11,12 +11,18 @@
               -# highlight the same nav menu item
               = @edit_templates.select { |k, v| @edit_template.match(/#{k}/) }.values.first
 
+          - currency = t(I18n.locale, scope: %i[money currencies])
           = form_tag theft_alerts_path,
             method: :post,
             id: "js-confirm-plan-form",
-            data: { key: ENV["STRIPE_PUBLISHABLE_KEY"], email: current_user.email, type:  "Pay", description: t(".bike_index_promoted_alert") },
+            data: { key: ENV["STRIPE_PUBLISHABLE_KEY"],
+            email: current_user.email,
+            type:  "Pay",
+            currency: currency,
+            description: t(".bike_index_promoted_alert") },
             class: "confirm-form" do
             = hidden_field_tag :stripe_amount, @selected_theft_alert_plan.amount_cents
+            = hidden_field_tag :stripe_currency, currency
             = hidden_field_tag :stripe_email
             = hidden_field_tag :stripe_token
             = hidden_field_tag :bike_id, @bike.id
