--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -24,7 +24,7 @@
             - numbers.each do |amount|
               %li.col-xs-4
                 %a.btn.btn-secondary{ data: { amount: amount } }
-                  #{ amount }$
+                  = number_to_currency(amount, precision: 0)
             %li.col-xs-8
               .input-group
                 .input-group-addon
@@ -40,9 +40,18 @@
   <script src="https://checkout.stripe.com/checkout.js"></script>
   - payment_type = @is_payment ? 'Pay' : 'Donate'
   - description = @is_payment ? t(".payment_to_bike_index") : t(".donate_to_bike_index")
-  - stripe_form_hash = { id: 'stripe_form', data: { key: ENV['STRIPE_PUBLISHABLE_KEY'], email: current_user && current_user.email, type: payment_type, description: description } }
+
+  - currency = t(I18n.locale, scope: %i[money currencies])
+  - stripe_form_hash = { id: 'stripe_form',
+    data: { key: ENV['STRIPE_PUBLISHABLE_KEY'],
+    email: current_user&.email,
+    type: payment_type,
+    currency: currency,
+    description: description } }
+
   = form_tag payments_path, stripe_form_hash do
     = hidden_field_tag :stripe_token
     = hidden_field_tag :stripe_amount
+    = hidden_field_tag :stripe_currency, currency
     = hidden_field_tag :stripe_email
     = hidden_field_tag :is_payment, @is_payment
