Externalize sidebar strings

--- a/app/views/welcome/user_home.html.haml
+++ b/app/views/welcome/user_home.html.haml
@@ -120,6 +120,6 @@
                 = image_tag "logos/bikefair.svg"
               .col-xs-10
                 %p
-                  Want to sell one of your registered bikes?
-                  = link_to "List a bike on BikeFair", "https://bikefair.org/auth/bikeindex"
+                  = t(".want_to_sell_your_bikes")
+                  = link_to t(".list_a_bike_on_bikefair"), "https://bikefair.org/auth/bikeindex"
       .ad-block#right300x600
