--- a/app/views/admin/payments/new.html.haml
+++ b/app/views/admin/payments/new.html.haml
@@ -20,7 +20,7 @@
       .input-group
         .input-group-prepend
           %span.input-group-text
-            $
+            = f.select :currency, options_for_select(currency_symbols.zip(available_currencies))
         = f.number_field :amount, step: 1, min: 0, class: "form-control"
     .col-md-6
       .form-group
