--- a/app/views/admin/paid_features/_form.html.haml
+++ b/app/views/admin/paid_features/_form.html.haml
@@ -32,7 +32,8 @@
         = f.label :amount
         .input-group.mb-2
           .input-group-prepend
-            .input-group-text $
+            .input-group-text
+              = f.select :currency, options_for_select(currency_symbols.zip(available_currencies))
           = f.number_field :amount, step: 1, min: 0, class: "form-control"
 
     .col-md-6.col-xs-12
