Open Twitter feed in new tab

--- a/app/views/admin/twitter_accounts/show.html.haml
+++ b/app/views/admin/twitter_accounts/show.html.haml
@@ -30,7 +30,7 @@
       %small Twitter Account:
       = @twitter_account.screen_name
     %small
-      = link_to "view on twitter", "https://twitter.com/#{@twitter_account.screen_name}"
+      = link_to "view on twitter", "https://twitter.com/#{@twitter_account.screen_name}", target: :_blank
 
     %table.table-list.mt-2
       %tbody
