--- a/app/views/bikes/edit_alert_purchase.html.haml
+++ b/app/views/bikes/edit_alert_purchase.html.haml
@@ -21,7 +21,7 @@
             description: t(".bike_index_promoted_alert") },
             class: "confirm-form" do
             = hidden_field_tag :stripe_amount, @selected_theft_alert_plan.amount_cents
-            = hidden_field_tag :stripe_currency, currency
+            = hidden_field_tag :stripe_currency, default_currency
             = hidden_field_tag :stripe_email
             = hidden_field_tag :stripe_token
             = hidden_field_tag :bike_id, @bike.id
