Automate TwitterAccount creation (#1369)
- Adds "check credentials" button to twitter account show page
- Adds omniauth-twitter gem
- Replaces manual `TwitterAccount` creation with automated flow using omniauth login

--- a/app/views/admin/twitter_accounts/index.html.haml
+++ b/app/views/admin/twitter_accounts/index.html.haml
@@ -2,7 +2,7 @@
   .col-sm-9.col-md-10
     %h1 Twitter Accounts
   .col-sm-3.col-md-2
-    = link_to "New Account", new_admin_twitter_account_path, class: "btn btn-success float-right"
+    = link_to "New Account", "/auth/twitter", class: "btn btn-success float-right"
 
   .col-12.mt-4
     %h4
