--- a/app/views/admin/twitter_accounts/show.html.haml
+++ b/app/views/admin/twitter_accounts/show.html.haml
@@ -2,6 +2,7 @@
   .col-6
     .mr-4
       = link_to "Edit", edit_admin_twitter_account_url(@twitter_account), class: "btn btn-lg btn-success"
+      = link_to "Check Credentials", check_credentials_admin_twitter_account_url(@twitter_account), class: "btn btn-lg btn-success"
 
 - if @twitter_account.errored?
   .row.mt-4.mb-4
@@ -29,7 +30,7 @@
       %small Twitter Account:
       = @twitter_account.screen_name
     %small
-      = link_to "view on twitter", "https://twitter.com/#{@twitter_account.screen_name}"
+      = link_to "view on twitter", "https://twitter.com/#{@twitter_account.screen_name}", target: :_blank
 
     %table.table-list.mt-2
       %tbody
@@ -54,5 +55,3 @@
   - if @twitter_account.tweets.count > 25
     Showing most recent 25
 = render "admin/tweets/tweets", tweets: @twitter_account.tweets.reorder(:created_at).limit(25)
-
-
