--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -199,7 +199,7 @@
     h1,
     h2,
     p {
-      color: white;
+      color: $white;
       display: block;
       margin: 15px auto;
       text-align: center;
@@ -221,7 +221,7 @@
     }
 
     h2 {
-      color: #ffffff;
+      color: $white;
       font-size: 24px;
       font-weight: 600;
       letter-spacing: 0.5px;
@@ -347,9 +347,15 @@
 }
 
 // Prevent overflow on tiny screens
-@media (max-width: 350px) {
-  .root-landing-banner-header .root-landing-header-text h1 {
-    font-size: 35px;
+@media (max-width: $grid-breakpoint-md) {
+  .root-landing-banner-header .root-landing-header-text {
+    h1 {
+      font-size: 2.3rem;
+    }
+
+    h2 {
+      line-height: 35px;
+    }
   }
 }
 
