Add translations for new bike form (#1370)
Translates some strings that were missed on a first pass because they're generated dynamically.

* Return translated select options from Organization#reg_affiliation_options
* Externalize missed generated strings for new bike form

--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -46,7 +46,7 @@
 
           .related-fields
             .form-group.row
-              = f.label :manufacturer_id, class: 'form-well-label'
+              = f.label :manufacturer_id, t(".manufacturer"), class: 'form-well-label'
 
               .form-well-input
                 - initial = @bike.manufacturer && { id: @bike.manufacturer.id, text: @bike.manufacturer.name }.to_json
@@ -153,7 +153,7 @@
                 class: "form-well-label"
               .form-well-input
                 = f.select :organization_affiliation,
-                  @organization.reg_affiliation_options.map { |a| [a.humanize, a] },
+                  @organization.reg_affiliation_options,
                   class: "form-control"
 
           .form-group.row.unnested-field.no-divider-row
