--- a/app/views/organized/manage/index.html.haml
+++ b/app/views/organized/manage/index.html.haml
@@ -67,7 +67,7 @@
   #delete-organization.collapse
     .text-md-center
       = link_to t(".delete_organization"),
-        organization_manage_path(id: current_organization.id, organization_id: current_organization.to_param),
+        organization_manage_path(id: current_organization.to_param, organization_id: current_organization.to_param),
         method: :delete,
         data: { confirm: t(".removal_confirmation", org_name: current_organization.name) },
         class: 'btn btn-danger'
