--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -53,7 +53,7 @@
     .col-6.col-md-4.col-lg-3
       .form-group.fancy-select.unfancy
         = f.label :manufacturer_id
-        = collection_select(:bike, :manufacturer_id, Manufacturer.frames, :id, :name, {}, { required: true, class: "form-control" })
+        = collection_select(:bike, :manufacturer_id, Manufacturer.frame_makers, :id, :name, {}, { required: true, class: "form-control" })
     .col-6.col-md-4.col-lg-3
       .form-group
         = f.label :manufacturer_other do
