--- a/app/views/admin/twitter_accounts/show.html.haml
+++ b/app/views/admin/twitter_accounts/show.html.haml
@@ -1,8 +1,9 @@
 .admin-subnav
   .col-6
     .mr-4
-      = link_to "Edit", edit_admin_twitter_account_url(@twitter_account), class: "btn btn-lg btn-success"
-      = link_to "Check Credentials", check_credentials_admin_twitter_account_url(@twitter_account), class: "btn btn-lg btn-success"
+      = link_to "Edit", edit_admin_twitter_account_url(@twitter_account), class: "btn btn-success"
+      = link_to "Check Credentials", check_credentials_admin_twitter_account_url(@twitter_account), class: "btn btn-success"
+      = link_to "Log in to refresh credentials", "/auth/twitter", class: "btn btn-success"
 
 - if @twitter_account.errored?
   .row.mt-4.mb-4
