--- a/app/views/admin/twitter_accounts/edit.html.haml
+++ b/app/views/admin/twitter_accounts/edit.html.haml
@@ -3,8 +3,11 @@
     %h1
       %small Update Twitter Account:
       = @twitter_account.screen_name
-    %small
+    %small.mr-4
       = link_to "View account data", admin_twitter_account_path(@twitter_account)
+    %small
+      = link_to "Log in to refresh credentials", "/auth/twitter"
+
   .col-sm-6.text-right
     = link_to "Delete account",
       admin_twitter_account_path(@twitter_account),
