Fix "no bikes found" copy
- Interpolating "all" or "stolen" ends up producing awkward copy

--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -62,7 +62,7 @@
 
       - else
         %h3.no-exact-results
-          = t(".no_bikes_matched", stolenness: stolenness_desc)
+          = t(".no_bikes_matched")
 
   - if @interpreted_params[:serial].present?
     .row
