--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -67,6 +67,13 @@
   - if @interpreted_params[:serial].present?
     .row
       .col-md-12
+        %h3.secondary-matches#js-partial-serial-search-header
+          .loading.d-none= t(".searching_for_partial_matches")
+          .loaded.d-none= t(".with_partial_serial_numbers_html", stolenness: stolenness_desc, serial: params[:serial])
+          .loaded-none.no-exact-results.d-none= t(".no_partial_matches_found")
+        #js-partial-serial-search
+    .row
+      .col-md-12
         %h3.secondary-matches#js-close-serial-search-header
           .loading.d-none= t(".searching_for_near_matches")
           .loaded.d-none= t(".with_close_serial_numbers_html", stolenness: stolenness_desc, serial: params[:serial])
