--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -63,33 +63,10 @@
         %h3.no-exact-results
           = t(".no_bikes_matched")
 
-  - if @interpreted_params[:serial].present?
-    .row
-      .col-md-12
-        %h3.secondary-matches#js-partial-serial-search-header
-          .loading.d-none= t(".searching_for_partial_matches")
-          .loaded.d-none= t(".with_partial_serial_numbers_html", stolenness: stolenness_desc, serial: params[:serial])
-          .loaded-none.no-exact-results.d-none= t(".no_partial_matches_found")
-        #js-partial-serial-search
+  #js-secondary-searches
 
-    .row
-      .col-md-12
-        %h3.secondary-matches#js-close-serial-search-header
-          .loading.d-none= t(".searching_for_near_matches")
-          .loaded.d-none= t(".with_close_serial_numbers_html", stolenness: stolenness_desc, serial: params[:serial])
-          .loaded-none.no-exact-results.d-none= t(".no_near_matches_found")
-        #js-close-serial-search
-
-    .row
-      .col-md-12
-        %h3.secondary-matches#js-external-registry-search-header
-          .loading.d-none= t(".searching_external_registries")
-          .loaded.d-none= t(".external_matches_found")
-          .loaded-none.no-exact-results.d-none= t(".no_external_matches_found")
-        #js-external-registry-search
-
-    .col-md-4.ad-col
-      .ad-block#right300x600
+  .col-md-4.ad-col
+    .ad-block#right300x600
 
 :javascript
   window.interpreted_params = #{@interpreted_params.to_json};
