link to organization show page, makes more sense

--- a/app/views/admin_mailer/feedback_notification_email.html.haml
+++ b/app/views/admin_mailer/feedback_notification_email.html.haml
@@ -83,7 +83,7 @@
     Created by #{@feedback.email}
   %hr
   %p
-    = link_to "View the organization", edit_admin_organization_url(organization)
+    = link_to "View the organization", admin_organization_url(organization)
 
 - else
   %p
