--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -81,7 +81,7 @@
           Search Location
         %td
           %span
-            = @organization.search_location
+            = @organization.search_location&.address
       %tr
         %td
           Search Radius (mi)
