Fix count methods, organizations_nearby

--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -57,8 +57,8 @@
       = f.label :search_radius, "Search radius (mi)"
       = f.number_field :search_radius, {class: "form-control"}
       %em.small
-        %pre.d-inline regional_suborganizations
-        will search within this radius for other orgs in the same area
+        %pre.d-inline organizations_nearby
+        will search within this radius for other organizations in the same area
 
   .col-md-6
     .form-group
