--- a/app/views/organized/dashboard/index.html.haml
+++ b/app/views/organized/dashboard/index.html.haml
@@ -24,7 +24,7 @@
         %td
           %strong= number_with_delimiter(counts[:all])
 
-  %h3.mt-4 Organizations in Region
+  %h3.mt-4 Organization Bikes in Region
   .full-screen-table.mt-4
     %table.table.table-striped.table-bordered.table-sm
       %thead
