Add Organization geo bike query methods

--- a/app/views/organized/dashboard/index.html.haml
+++ b/app/views/organized/dashboard/index.html.haml
@@ -4,35 +4,33 @@
     Dashboard
 
 - if current_organization.regional? && current_organization.is_paid?
-  %h3.mt-4 Bikes in Region
-  - counts = current_organization.bikes_in_region_counts
+  %h3.mt-4
+    Bikes Nearby
+    %small (within #{current_organization.search_radius} mi of city center)
   .full-screen-table.mt-4
     %table.table.table-striped.table-bordered.table-sm
       %tbody
         %tr
           %td
-            Bikes in nearby organizations
-          %td= number_with_delimiter(counts[:in_organizations])
+            Bikes associated with nearby organizations
+          %td= number_with_delimiter(@counts.fetch(:in_organizations))
         %tr
           %td
-            Bikes nearby,<sup>*</sup> not affiliated with any nearby organizations
-            %br
-            %small *within #{current_organization.search_radius} mi of city center
-          %td= number_with_delimiter(counts[:in_region_unaffiliated])
-      %tfoot
-        %td
-          %strong Total
-        %td
-          %strong= number_with_delimiter(counts[:all])
+            Bikes nearby
+          %td
+            = number_with_delimiter(@counts.fetch(:in_region))
+        %tr
+          %td Bikes nearby, not associated with any nearby organizations
+          %td= number_with_delimiter(@counts.fetch(:in_region_unaffiliated))
 
-  %h3.mt-4 Organization Bikes in Region
+  %h3.mt-4 Organization bikes in region
   .full-screen-table.mt-4
     %table.table.table-striped.table-bordered.table-sm
+      - total_bikes_count = 0
       %thead
         %th Organization
         %th Bikes
       %tbody
-        - total_bikes_count = 0
         - current_organization.organizations_nearby.each do |organization|
           - count = organization.bikes.count
           - total_bikes_count += count
@@ -41,7 +39,7 @@
             %td= number_with_delimiter(count)
       %tfoot
         %td
-          %strong Total
+          %strong Total bikes
         %td
           %strong= number_with_delimiter(total_bikes_count)
 
