Add regional organization associations with geocoding, bike lat/long (#1403)
- Adds regional organization associations to `Organization`, geocodes by the first location's coordinates
- Adds lat/long and city columns to `Bikes`, sets bike location info on registration
- Adds organization dashboard with nearby orgs / bikes counts

--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -52,8 +52,13 @@
           = f.radio_button "kind", kind, class: "form-check-input"
           = f.label "kind_#{kind}", kind.humanize, class: "form-check-label"
 
-
-
+  .col-md-6
+    .form-group
+      = f.label :search_radius, "Search radius (mi)"
+      = f.number_field :search_radius, {class: "form-control"}
+      %em.small
+        %pre.d-inline organizations_nearby
+        will search within this radius for other organizations in the same area
 
   .col-md-6
     .form-group
@@ -69,10 +74,10 @@
       = f.label :api_access_approved
       %small.less-strong
         to be able to post updates via API, check this too
-
     .form-group
       = f.check_box :approved
       = f.label :approved, 'Validated & approved'
+
 .row
   .col-md-6
     .form-group.fancy-select.unfancy
