--- a/app/views/organized/dashboard/index.html.haml
+++ b/app/views/organized/dashboard/index.html.haml
@@ -8,7 +8,7 @@
 
 - if current_organization.parent?
   %h3.mt-4
-    Associated organizations
+    Child organizations
   .full-screen-table.mt-4
     %table.table.table-striped.table-bordered.table-sm
       %thead
